--- a/Worker/Worker.csproj
+++ b/Worker/Worker.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\QueueCommon\Common.csproj" />
   </ItemGroup>
 
